Issue #266:WMA doesnt support writing multiple fields Chnages by Christian Laireiter