@@ -20,24 +20,28 @@ package org.jaudiotagger.audio.asf.util;
 
 import org.jaudiotagger.audio.asf.data.Chunk;
 
+import java.io.Serializable;
 import java.util.Comparator;
 
 /**
  * This class is needed for ordering all types of
- * {@link org.jaudiotagger.audio.asf.data.Chunk}s ascending by their Position.
- * <br>
- *
+ * {@link org.jaudiotagger.audio.asf.data.Chunk}s ascending by their Position. <br>
+ * 
  * @author Christian Laireiter
  */
-public class ChunkPositionComparator implements Comparator<Chunk>
-{
+public final class ChunkPositionComparator implements Comparator<Chunk>,
+        Serializable {
+
+    /**
+     * 
+     */
+    private static final long serialVersionUID = -6337108235272376289L;
 
     /**
      * {@inheritDoc}
      */
-    public int compare(Chunk c1, Chunk c2)
-    {
-        int result = new Long(c1.getPosition()).compareTo(c2.getPosition());
-        return result;
+    public int compare(final Chunk first, final Chunk second) {
+        return Long.valueOf(first.getPosition())
+                .compareTo(second.getPosition());
     }
 }
